pkg/ibmvpc/examples/out/explain_out/VsiToVsi2_all_vpcs_explain_debug.txt
Connectivity explanation between vsi2-ky and 10.240.10.4 (vsi1-ky[10.240.10.4]) within test-vpc1-ky
===================================================================================================

The following connection exists between vsi2-ky[10.240.20.4] and vsi1-ky[10.240.10.4]: All Connections
Path:
	vsi2-ky[10.240.20.4] -> security group sg2-ky -> subnet2-ky -> network ACL acl2-ky -> 
	network ACL acl1-ky -> subnet1-ky -> security group sg1-ky -> vsi1-ky[10.240.10.4]

Details:
~~~~~~~~
Egress:
security group sg2-ky allows connection with the following allow rules
	index: 1, direction: outbound, protocol: all, cidr: 10.240.10.0/24
network ACL acl2-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

Ingress:
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg1-ky allows connection with the following allow rules
	index: 3, direction: inbound, protocol: all, cidr: 10.240.20.4/32,10.240.30.4/32
------------------------------------------------------------------------------------------------------------------------
